--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"generate-password": "^1.6.1",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.0.8"
+		"mongoose": "^6.0.8",
+		"nodemailer": "^6.6.5"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.13"
