--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"watch": "nodemon server.js",
 		"start": "node server.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,6 +23,9 @@
 		"nodemailer": "^6.6.5"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.13"
+		"axios": "^0.22.0",
+		"jest": "^27.2.4",
+		"nodemon": "^2.0.13",
+		"supertest": "^6.1.6"
 	}
 }
