--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.4.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
@@ -12,9 +13,12 @@
 		"react": "^17.0.2",
 		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
+		"react-responsive-modal": "^6.1.0",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"react-select": "^5.0.0",
+		"reactjs-popup": "^2.0.5",
+		"styled-components": "^5.3.1",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
