--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
 		"aos": "^2.3.4",
 		"axios": "^0.21.4",
 		"boxicons": "^2.0.9",
+		"pretty-checkbox": "^3.0.3",
+		"pretty-checkbox-react": "^3.2.0",
 		"react": "^17.0.2",
 		"react-calendar": "^3.4.0",
 		"react-dom": "^17.0.2",
@@ -17,6 +19,7 @@
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"react-select": "^5.0.0",
+		"react-simple-checkbox": "^1.3.0",
 		"reactjs-popup": "^2.0.5",
 		"styled-components": "^5.3.1",
 		"web-vitals": "^1.1.2"
