--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
 		"pretty-checkbox-react": "^3.2.0",
 		"react": "^17.0.2",
 		"react-calendar": "^3.4.0",
+		"react-datepicker": "^4.2.1",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
 		"react-responsive-modal": "^6.1.0",
